src/objects/POR_case_routing_queues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Map of Product to Queue Map for case creation when the a Problem order is created by DI.</description>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>Stores the API name of Queue</description>
        <label>Queue Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_DeveloperName__c</fullName>
        <label>Template DeveloperName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Email_hours__c</fullName>
        <label>2nd Email hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POR Case Routing Queues</label>
</CustomObject>